--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -30,6 +30,22 @@ services:
       timeout: 20s
       retries: 10
 
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:5
+    env_file: .env
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=""
+      - MYSQL_ROOT_PASSWORD=""
+      - PMA_HOST=db
+    ports:
+      - 6543:80
+    networks:
+      - master
+    depends_on:
+      db:
+        condition: service_healthy
+
 networks:
   master:
     name: makhzan-network
