--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "rebuild:seed": "node --version &&  rm -rf node_modules && rm -f package-lock.json && npm install && cd database && npm exec sequelize-cli db:seed:all && cd .. && npm run build:webpack",
-    "run:container:dev": "npm run rebuild:seed && node ./dist/src/main"
+    "run:container:dev": "node ./dist/src/main"
   },
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
