--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "image-size": "^1.0.2",
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
