--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -14,6 +14,8 @@ services:
       - 8000:3000
     depends_on:
       - db
+    volumes:
+      - storage_volume:/home/app/uploads
 
   db:
     image: mysql:8.0
@@ -49,3 +51,7 @@ services:
 networks:
   master:
     name: makhzan-network
+
+volumes:
+  makhzan_storage_volume:
+    name: makhzan_storage_volume
