--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
     volumes:
-      - storage_volume:/home/app/uploads
+      - makhzan_storage_volume:/home/app/uploads
 
   db:
     image: mysql:8.0
